--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@alpinejs/collapse": "^3.10.5",
         "flowbite": "^1.5.3"
     }
 }
