--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,8 +2,13 @@
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
+    Options +FollowSymLinks
 
     RewriteEngine On
+
+    # Redirect http to https
+    RewriteCond %{SERVER_PORT} 80
+    RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L,NE,QSA]
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
@@ -18,4 +23,8 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # Redirect www.domain.com to domain.com
+    RewriteCond %{HTTP_HOST} ^www.akipaj.fr [NC]
+    RewriteRule ^(.*) https://akipaj.fr/$1 [L,R=301,QSA]
 </IfModule>
