--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
-        "stripe/stripe-php": "^10.0"
+        "stripe/stripe-php": "^10.0",
+        "symfony/http-client": "^6.2",
+        "symfony/sendinblue-mailer": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
