--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@alpinejs/collapse": "^3.10.5",
         "@alpinejs/intersect": "^3.10.5",
         "@toast-ui/editor": "^3.2.1",
+        "flickity": "^3.0.0",
         "flowbite": "^1.5.3",
         "imagesloaded": "^5.0.0"
     }
