--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "devDependencies": {
         "@prettier/plugin-php": "^0.19.3",
-        "@shufo/prettier-plugin-blade": "^1.8.6",
+        "@shufo/prettier-plugin-blade": "0.2.1",
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
@@ -17,7 +17,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "prettier": "^2.8.3",
-        "prettier-plugin-tailwindcss": "^0.2.2",
+        "prettier-plugin-tailwindcss": "^0.2.1",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0"
     },
